# Arabic-Fact-Checking

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  claimReviewsParser.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
claim_retriever/: config.py  constants.py  main.py  queries.txt  utils.py
data/: claim_reviews.json  unique_claim_reviews.json
information_retrieval/claim_retriever/: api.py  config.py  constants.py  main.py  utils.py
knowledge_store/: main.py  utils.py
retrieval/claim_retriever/: api.py  main.py  utils.py
retrieval/expected_evidence_retriever/: main.py  test.py  test_langchain.py  utils.py
retrieval/gold_evidence_retriever/: main.py  test.py  utils.py
src/: queries.py
src/api/: app.py  deps.py
src/cli/: main.py
src/clients/: __init__.py
src/config/: constants.py  properties.py  settings.py
src/core/: config.py  exceptions.py  logging.py
src/evaluation/: evaluator.py  hungarian_meteor.py  utils.py
src/models/: __init__.py  claim.py  evaluation.py  evidence.py  pipeline.py  requests.py  verification.py
src/pipeline/: job_store.py  main.py  runner.py
src/retrieval/: __init__.py  claim_retriever.py  evidence_retriever.py  gold_retriever.py
src/scripts/: generate_gold_qa_pairs.py  generate_retrieved_evidence_qa_pairs.py  gold_urls_to_concatenated_text.py  predict_labels.py  retrieved_evidence_to_concatenated_text.py
src/utils/: data_processing.py  date_utils.py  file_operations.py  text_pocessing.py  (+2 more)
tests/: conftest.py
verification/: ev2r_recall.py  evaluate.py  hungarian_meteor.py
(+27 files in other folders)
